# Urbanaut-API

./: .dockerignore  .env.sample  .gitignore  .gitlab-ci.yml  Dockerfile  LICENSE  Makefile  README.md  ci-cd.yaml  deploy.sh  docker-compose.yml  entrypoint.sh  manage.py  postgres  pyproject.toml  test_websocket.py
.github/workflows/: ci-cd.yaml
docs/: DEPLOY.md  db_v1.pgerd  diagram.mwb.bak
locale/uk/LC_MESSAGES/: django.po
scratches/: gemini_test.py  test_curl.sh  test_onesignal.py  websocket_test.py
src/apps/abandoned/: apps.py  enums.py  pagination.py  permissions.py  urls.py
src/apps/abandoned/admin/: __init__.py  areas.py  categories.py  events.py  objects.py  participations.py  places.py  preservation.py  reports.py  security.py
src/apps/abandoned/documents/: places.py
src/apps/accounts/: admin.py  apps.py  enums.py  exceptions.py  middlewares.py  signals.py  sites.py  urls.py
src/apps/actions/: apps.py  enums.py
src/apps/blog/: urls.py
src/apps/config/: admin.py  apps.py  services.py
src/apps/dashboard/: urls.py
src/apps/docs/: admin.py  apps.py  urls.py
src/apps/feedbacks/: apps.py  enums.py  urls.py
src/apps/geo/: admin.py  apps.py  models.py  signals.py  urls.py
src/apps/kafka/: apps.py  consumers.py  deserializers.py  types.py
src/apps/keeper/: apps.py
src/apps/media/: apps.py  enums.py  eums.py  permissions.py  urls.py
src/apps/notifications/: enums.py  urls.py
src/apps/notifier/: apps.py  urls.py
src/apps/permissions/: apps.py  handlers.py  permissions.py  serializers.py  utils.py
src/apps/ratings/: apps.py  urls.py
src/apps/tags/: urls.py
src/apps/triggers/: admin.py  apps.py  models.py  tasks.py
src/config/: asgi.py  celery.py  urls.py  wsgi.py
src/config/settings/: __init__.py  achievements.py  ai.py  auth.py  base.py  cache.py  celery.py  constance.py  databases.py  defaults.py  docs.py  elastic.py  email.py  geo.py  i18n.py  kafka.py  logging.py  lookups.py  media.py  onesignal.py  permissions.py  redis.py  rest.py  security.py  telegram.py  unfold.py  websockets.py
src/config/web/: asgi.py  urls.py
src/utils/: geo.py  otp.py  usernames.py
src/utils/ai/: __init__.py  gemini.py  types.py
src/utils/cache/: __init__.py  decorators.py
src/utils/celery/: __init__.py  beat.py
src/utils/clsutils/: __init__.py  generators.py
src/utils/db/: __init__.py  choices.py  enums.py  models.py  search.py  shortcuts.py  types.py
src/utils/django/: beat.py  settings.py
src/utils/filters/: __init__.py
src/utils/otp/: __init__.py  otp.py
src/utils/telegram/: __init__.py
static/js/: maintenance-toggle.js
templates/gis/: unfold_openlayers_osm.html
tests/: geopy_test.py
(+711 files in other folders)
