[tool.poetry]
name = "urbanaut-api"
version = "0.0.1"
description = ""
authors = ["crazyproger1 <crazyproger1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-decouple = "^3.8"
python-dotenv = "^1.0.1"
django-split-settings = "^1.3.2"
colorlog = "^6.8.2"
celery = "^5.4.0"
flower = "^2.0.1"
django-modeltranslation = "^0.19.7"
django-filter = "^24.3"
djangorestframework = "^3.15.2"
drf-yasg = "^1.21.7"
uvicorn = "^0.30.6"
drf-spectacular = "^0.27.2"
django-celery-beat = "^2.6.0"
django-cors-headers = "^4.4.0"
psycopg2 = "^2.9.9"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
mypy = "^1.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
